# navit

./: CMakeLists.txt  README.md
.circleci/: config.yml
contrib/sailfish/: navit-sailfish.spec
navit/: CMakeLists.txt  attr_def.h  traffic.c  xmlconfig.c
navit/binding/dbus/: binding_dbus.c
navit/graphics/win32/: graphics_win32.c
navit/gui/internal/: gui_internal_command.c  gui_internal_poi.c  gui_internal_search.c
navit/gui/qt5_qml/: backend.cpp  qml_poi.cpp  qml_poi.h
navit/icons/: mall.xpm  marine.xpm  shop_furnish.xpm  shop_handg.xpm
navit/map/binfile/: CMakeLists.txt
navit/traffic/permanentrestrictions/: fvzberlinlteur6.xml
navit/traffic/traff_file/: CMakeLists.txt
navit/traffic/traff_mqtt/: CMakeLists.txt  traffic_traff_mqtt.c
navit/vehicle/gpsd/: vehicle_gpsd.c
po/: ab.po.in
scripts/: build_tomtom_minimal.sh  build_tomtom_plugin.sh  build_win32.sh  ci_sanity_checks.sh  update_download_center.sh
